# audio-transcription-processor

./: .gitignore  LICENSE  README.md  app.py  app_standalone.py  main.py  main_standalone.py  pyproject.toml  requirements.txt  test.py
app/: audio_processor.py  config.py  diarizer.py  transcriber.py  ui.py
transcriptions/: list.txt
